Fix permission setting on firefox

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
   "version": "1.4.3",
   "manifest_version": 2,
   "permissions": [
-    "storage"
+    "storage",
+    "<all_urls>"
   ],
   "background": {
     "scripts": [
